@@ -114,6 +114,7 @@ proc reporting_setup  {} {
    global ts_config CHECK_USER
    global reporting_old_config reporting_old_exechost
    global reporting_file reporting_acct_file reporting_test_host
+   global reporting_old_config_test_host
 
    # delete any jobs that might be in the system
    delete_all_jobs
@@ -124,6 +125,7 @@ proc reporting_setup  {} {
    # archive old config
    get_config reporting_old_config
    get_exechost reporting_old_exechost $reporting_test_host
+   get_config reporting_old_config_test_host $reporting_test_host
 
    # enable immediate scheduling
    set schedd_conf(flush_submit_sec) 1
@@ -167,10 +169,12 @@ proc reporting_setup  {} {
 
 proc reporting_cleanup {} {
    global reporting_old_config reporting_old_exechost
-   global reporting_file reporting_acct_file reporting_test_host
+   global reporting_file reporting_acct_file reporting_test_host 
+   global reporting_old_config_test_host
 
    # restore old config
    set_config reporting_old_config
+   set_config_and_propagate reporting_old_config_test_host $reporting_test_host
    set_exechost reporting_old_exechost $reporting_test_host
    reset_schedd_config
 
@@ -187,10 +191,6 @@ proc reporting_cleanup {} {
    set complex(F002) ""
    set complex(F003) ""
    set_complex complex
-
-   # disable reporting
-   set new_config(reporting_params) "accounting=true reporting=false"
-   set_config new_config
 
    # delete the reporting file
    file delete -force $reporting_file
